force-app/main/default/objects/animalos__Action_Plan__c/animalos__Action_Plan__c.object-meta.xml
<CustomObject>
    <label>Action Plan</label>
    <nameField>
        <label>Action Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>