force-app/main/default/objects/animalos__Action_Plan__c/fields/animalos__Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>animalos__Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>animalos__Action_Plan__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>