force-app/main/default/objects/animalos__Action_Plan__c/fields/animalos__Description__c.field-meta.xml
<CustomField>
    <fullName>animalos__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>