force-app/main/default/objects/animalos__Action_Plan__c/fields/animalos__Frequency_Interval__c.field-meta.xml
<CustomField>
    <fullName>animalos__Frequency_Interval__c</fullName>
    <label>Frequency Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>