force-app/main/default/objects/animalos__Action_Plan__c/fields/animalos__Specific_Animal__c.field-meta.xml
<CustomField>
    <fullName>animalos__Specific_Animal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specific Animal</label>
    <type>Checkbox</type>
</CustomField>