force-app/main/default/objects/animalos__Action_Plan__c/fields/animalos__Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>