force-app/main/default/objects/animalos__Action_Plan__c/fields/aos_Assign_To_Incoming_Animals__c.field-meta.xml
<CustomField>
    <fullName>aos_Assign_To_Incoming_Animals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign To Incoming Animals</label>
    <type>Checkbox</type>
</CustomField>