force-app/main/default/objects/animalos__Action_Plan__c/listViews/Animal_Specific.listView-meta.xml
<ListView>
    <fullName>Animal_Specific</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>animalos__Specific_Animal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Animal Specific</label>
</ListView>