force-app/main/default/objects/animalos__Action_Plan__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>animalos__Description__c</columns>
    <columns>animalos__Animal_Type__c</columns>
    <columns>animalos__Type__c</columns>
    <columns>animalos__Frequency__c</columns>
    <columns>animalos__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>